reforging technically works but is yet to be implemented

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -32,6 +32,10 @@ commands:
     description: toggles global pvp
     usage: /ToggleGlobalPvp
     permission: developer
+  Reforge:
+    description: allows testing of reforge mechanic
+    usage: /Reforge
+    permission: developer
 
 permissions:
   developer:
