--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -28,6 +28,14 @@ commands:
     description: allows mms to damage player using this plugin
     usage: /MysticaDamage <target> <caster> <type> <amount>
     permission: developer
+  MysticaEffect:
+    description: allows mms to inflict status using this plugin
+    usage: /MysticaEffect <target> <caster> <type> <modifier>
+    permission: developer
+  StartFuryTimer:
+    description: allows mms to start their fury timer
+    usage: /StartFuryTimer <caster> <duration>
+    permission: developer
   ToggleGlobalPvp:
     description: toggles global pvp
     usage: /ToggleGlobalPvp
