--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -88,6 +88,10 @@ commands:
     description: clears any lingering armorstands
     usage: /ClearStands
     permission: developer
+  MysticaInteractions:
+    description: allows mms to check for mystica data before determining which interaction to start
+    usage: /MysticaInteractions <Interaction> <Player>
+    permission: developer
 
 permissions:
   developer:
