class swap finished. changed layout of skills. added data on basics.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -26,6 +26,14 @@ commands:
     description: opens class select
     usage: /ClassSelect <player>
     permission: developer
+  ClassSwap:
+    description: opens class swap
+    usage: /ClassSwap <player>
+    /permission: developer
+  GearSwap:
+    description: opens gear swap
+    usage: /GearSwap <player>
+    permission: developer
   ClassGuide:
     description: opens class guide
     usage: /classguide
