--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -59,14 +59,6 @@ commands:
     description: allows mms to start their fury timer
     usage: /StartFuryTimer <caster> <duration>
     permission: developer
-  SkillTargetValidCheck:
-    description: allows mms to check validity of their target
-    usage: /SkillTargetValidCheck <caster> <target>
-    permission: developer
-  SkillHitValidCheck:
-    description: allows mms to check validity of the player they hit
-    usage: /SkillHitValidCheck <caster> <target>
-    permission: developer
   ToggleGlobalPvp:
     description: toggles global pvp
     usage: /ToggleGlobalPvp
@@ -141,6 +133,14 @@ commands:
   SpawnCompanions:
     description: spawns companions for a player
     usage: /SpawnCompanions <player>
+    permission: developer
+  HitValidCheck:
+    description: lets mms see if what they hit with a skill is valid
+    usage: /HitValidCheck <caster> <target>
+    permission: developer
+  SetCaution:
+    description: lets mms mess with fake player ai
+    usage: /SetCaution <entityuuid> <boolean>
     permission: developer
 
 permissions:
