--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -131,6 +131,10 @@ commands:
     description: lets interactions signal mms
     usage: /SignalNearbyNpc <player> <signal>
     permission: developer
+  StopCompanionRotation:
+    description: lets companions stop their rotation
+    usage: /StopCompanionRotation <target.uuid>
+    permission: developer
 
 permissions:
   developer:
