--- a/pom.xml
+++ b/pom.xml
@@ -111,5 +111,12 @@
             <version>2.11.5</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>net.playavalon</groupId>
+            <artifactId>MythicDungeons</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/MythicDungeons-1.4.1.jar</systemPath>
+        </dependency>
     </dependencies>
 </project>
