all generate/identify done (for now) started upgrade

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -141,6 +141,10 @@ commands:
     description: opens matchmaking for player
     usage: /Matchmaking <player> <dungeon>
     permission: developer
+  MysticaItem:
+    description: allows devs to get unidentified items
+    usage: /MysticaItem <player>
+    permission: developer
 
 permissions:
   developer:
