--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -91,8 +91,8 @@ commands:
     description: opens dungeon select for player
     usage: /DungeonSelect <player>
     permission: developer
-  MysticaItem:
-    description: allows devs to get unidentified items
+  DevBox:
+    description: allows devs to get items for testing
     usage: /MysticaItem <player>
     permission: developer
   StarterKit:
